--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ layout: default
             
 {% include projects.html %}
             
-{% include skills.html %}
+{% include education.html %}
 
 
