--- a/cv/index.html
+++ b/cv/index.html
@@ -132,7 +132,7 @@
 <p>I&rsquo;m available immediately.</p>
 <h2 id="cv">CV</h2>
 <p>For contracts, I&rsquo;m open to most opportunities.</p>
-<p>For permament roles, I&rsquo;m looking for a role with a good team and to work for a company where I appreciate the product, the product servers a useful purpose and the business model appears to be viable commerically. As most of the above is subjective, I&rsquo;m happy to start a discussion.</p>
+<p>For permament roles, I&rsquo;m looking for a role with a good team and to work for a company where I appreciate the product, the product serves a useful purpose and the business model appears to be viable, commerically. As most of the above is subjective, I&rsquo;m happy to start a discussion to explore possibilities.</p>
 <p><a href="files/patrick_mcandrew_cv_it_contract.pdf">Contract CV</a></p>
 <p><a href="files/patrick_mcandrew_cv_it_perm.pdf">Permament Hands On (Developer/DevOps/Manager) CV</a></p>
 <p><a href="files/patrick_mcandrew_cv_cto.pdf">Permament CTO CV</a></p>
@@ -157,7 +157,10 @@
           </div>
           <ul class="link-list"><li>
               <a href="/"><span class="icon"><i class="fa fa-home"></i></span> Homepage</a>
-            </li><li></li>
+            </li><li><a href="/credits/">
+                  <span class="icon"><i class="fa fa-cube"></i></span>
+                  Credits
+                </a></li>
             <li><a href="/tags/">
                 <span class="icon"><i class="fa fa-tag"></i></span> 
                 All Tags
