--- a/projects/clipdo/index.html
+++ b/projects/clipdo/index.html
@@ -180,7 +180,10 @@ aspect where you could discover content on the site as well as comment on conten
           </div>
           <ul class="link-list"><li>
               <a href="/"><span class="icon"><i class="fa fa-home"></i></span> Homepage</a>
-            </li><li></li>
+            </li><li><a href="/credits/">
+                  <span class="icon"><i class="fa fa-cube"></i></span>
+                  Credits
+                </a></li>
             <li><a href="/tags/">
                 <span class="icon"><i class="fa fa-tag"></i></span> 
                 All Tags
