--- a/projects/so-sure/index.html
+++ b/projects/so-sure/index.html
@@ -186,7 +186,10 @@
           </div>
           <ul class="link-list"><li>
               <a href="/"><span class="icon"><i class="fa fa-home"></i></span> Homepage</a>
-            </li><li></li>
+            </li><li><a href="/credits/">
+                  <span class="icon"><i class="fa fa-cube"></i></span>
+                  Credits
+                </a></li>
             <li><a href="/tags/">
                 <span class="icon"><i class="fa fa-tag"></i></span> 
                 All Tags
