update images for gfy

--- a/projects/gfy/index.html
+++ b/projects/gfy/index.html
@@ -150,8 +150,11 @@
 <h2 id="project-details">Project Details:</h2>
 <p>I worked with GFY to definite what their digital MVP would look like. I then created a web based debt calculator and a basic budgeting tool along with user authentication.</p>
 <h2 id="debt-calculator-mvp">Debt Calculator MVP:</h2>
-<p><img src="images/debt.png" alt="">
-<img src="images/debt-plan.png" alt=""></p>
+<p><img src="images/rocket.png" alt="">
+<img src="images/debt.png" alt="">
+<img src="images/debt-plan.png" alt="">
+<img src="images/budget.png" alt="">
+<img src="images/plan.png" alt=""></p>
 
         </section>
       </div>
