--- a/cv/index.html
+++ b/cv/index.html
@@ -129,7 +129,7 @@
         
         <section class="section content has-text-justified">
           <h2 id="availablity">Availablity</h2>
-<p>I&rsquo;m available immediately.</p>
+<p>I&rsquo;m currently in a contract and expect to be available late Sept/early Oct 2020.</p>
 <h2 id="cv">CV</h2>
 <p>For contracts, I&rsquo;m open to most opportunities.</p>
 <p>For permament roles, I&rsquo;m looking for a role with a good team and to work for a company where I appreciate the product, the product serves a useful purpose and the business model appears to be viable, commerically. As most of the above is subjective, I&rsquo;m happy to start a discussion to explore possibilities.</p>
